src/components/Homepage/CarouselSection/CarouselSection.module.css
.carouselSection {
	max-height: calc(100vh - 60px);

	border-top: 1px solid rgb(214, 214, 214);
	border-bottom: 1px solid rgb(214, 214, 214);

	display: flex;
	overflow: hidden;
  align-items: center;

	position: relative;
}

.carouselCont {
	min-width: 100vw;

	display: flex;
	flex: 1;
  overflow: hidden;
}

.carouselTrack {
	width: calc(300vw - 42px);
	transition: transform 0.5s ease-in-out;
	display: flex;
}

.slideCont {
	flex: 0 0 calc(100vw - 14px);
	height: auto;
	max-height: calc(100vh - 60px);
	position: relative;
}

.slideCont picture {
  display: block;
  width: 100%;
  height: 100%;
  max-height: calc(100vh - 60px);
}

.slideCont img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center center;
}

.leftArrow,
.rightArrow {
	min-height: 100%;

	background: transparent;
	border: none;
	cursor: pointer;

	transition: all 0.5s ease-in-out;

	position: absolute;
}

.rightArrow {
	right: 0;
}

.leftArrow:hover {
	background: linear-gradient(to left, transparent, rgb(10, 10, 10));
	border: none;
}

.rightArrow:hover {
	background: linear-gradient(to right, transparent, rgb(10, 10, 10));
	border: none;
}

.leftArrow > img,
.rightArrow > img {
	width: 30px;
}

.carouselMarketingText {
	max-width: 1250px;
	width: 100%;
	padding: 1rem;

	background-color: rgba(0, 0, 0, 0.6);

	position: absolute;
	bottom: 4rem;
  left: 50%;
  transform: translateX(-50%);
}

.standardText {
	font-size: 2.5rem;
	font-family: 'DINNext bold';
}

.imperial {
	font-family: Imperial;
	font-size: 1rem;
}

.naboo {
	font-family: Naboo;
	font-size: 1rem;
}

.shopCapitalBtn {
	margin-top: 1rem;
	padding: 1rem 3rem;

	font-family: 'DINNext bold';
	font-size: 1.5rem;
	letter-spacing: 1px;
	
  border: 2px solid rgb(179, 179, 179);

	transition: all 0.3s ease-in-out;
}

.shopCapitalBtn:hover {
  border: 2px solid rgb(238, 238, 238);
	letter-spacing: 2px;
	background-color: rgba(0, 0, 0, 0.2);
}

.carouselQuickNav {
	position: absolute;
	bottom: 1rem;
  left: 50%;
  transform: translateX(-50%);
}

.carouselQuickNavBtn {
	margin: 0 12px;
	padding: 0;
	border: 1px solid rgb(189, 189, 189);
}

.carouselQuickNavBtn:hover {
	border: 1px solid rgb(243, 243, 243);
}

.navSquare {
	height: 4px;
	width: 2.5rem;
}

.navSquare.active {
	background-color: rgb(243, 243, 243);
}

@media (max-width: 1250px) {
	.standardText {
		font-size: 2rem;
	}

	.imperial {
		font-size: 0.9rem;
	}
	
	.naboo {
		font-size: 0.9rem;
	}
}

@media (max-width: 700px) {
	.standardText {
		font-size: 1.8rem;
	}

	.imperial {
		font-size: 0.8rem;
	}
	
	.naboo {
		font-size: 0.8rem;
	}

	.shopCapitalBtn {
		padding: 1rem;
		letter-spacing: 0;
	}
	
	.shopCapitalBtn:hover {
		letter-spacing: 0.5px;
	}
}

@media (max-width: 600px) {
	.imperial {
		font-size: 0.7rem;
	}
	
	.naboo {
		font-size: 0.7rem;
	}

	.shopCapitalBtn {
		padding: 1rem;
		font-size: 1.3rem;
	}

	.leftArrow > img,
	.rightArrow > img {
		width: 25px;
	}
}

@media (max-width: 500px) {

	.standardText {
		font-size: 1.4rem;
	}

	.imperial {
		font-size: 8px;
	}
	
	.naboo {
		font-size: 8px;
	}

	.shopCapitalBtn {
		padding: 0.5rem;
		font-size: 1.1rem;
		letter-spacing: 0;
	}
	
	.shopCapitalBtn:hover {
		letter-spacing: 0.5px;
	}

	.leftArrow > img,
	.rightArrow > img {
		width: 20px;
	}

	.carouselQuickNavBtn {
		margin: 0 6px;
	}
	
	.navSquare {
		height: 3px;
		width: 2rem;
	}
}

